.history/k8s/ingress-service_20200210211144.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
      - http:
          paths:
            - path:
              backend:
                serviceName: client-custer-ip-service
                servicePort: 3000
            - path:
              backend:
                serviceName: server-cluster-ip-service
                servicePort: 5000
